Define nav with values from config

--- a/_config.yml
+++ b/_config.yml
@@ -17,3 +17,11 @@ languages:
 - en: English
 - zh-cn: Chinese
 - es: Spanish
+navigation:
+- government: "Government"
+- jobs: "Jobs"
+- public-safety: "Public Safety"
+- licensing-permits: "Licensing &amp; Permits"
+- utilities-streets: "Utilities &amp; Streets"
+- transport: "Transport"
+- parks-recreation: "Parks &amp; Recreation"
