Put back menu on small screen

--- a/_config.yml
+++ b/_config.yml
@@ -25,3 +25,7 @@ navigation:
 - utilities-streets: "Utilities &amp; Streets"
 - transport: "Transport"
 - parks-recreation: "Parks &amp; Recreation"
+government:
+- "departments": "Departments"
+transport:
+- "parking": "Parking"
