Department list is now generated from config, closing #4

--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ departments:
 - "human-resources-management": "Human Resources Management"
 - "human-services": "Human Services"
 - "information-technology": "Information Technology"
-- "parks-recreation": "Parks &amp; Recreation<"
+- "parks-recreation": "Parks &amp; Recreation"
 - "planning-building": "Planning &amp; Building"
 - "police-department": "Police Department"
 - "public-library": "Public Library"
