Fix url fragment

--- a/_data/departments.yml
+++ b/_data/departments.yml
@@ -16,4 +16,4 @@
 - "public-works": "Public Works"
 - "city-council": "City Council"
 - "city-attorney": "City Attorney"
-- "City Auditor": "City Auditor"
+- "city-auditor": "City Auditor"
