--- a/_data/categories.yml
+++ b/_data/categories.yml
@@ -18,7 +18,10 @@ toplevel:
   description: "Including bill payments, reporting issues and disputes"
 - url: transport
   name: "Transport"
-  description: "Including public transport, parking and citations"
+  description: "Including public <a href=''>transport</a>, parking and citations"
+  secondary:
+  - url: "parking"
+  - name: "Parking"
 - url: parks-recreation
   name: "Parks &amp; Recreation"
   description: "Includes city provided outdoor activities, attractions and entertainment"
